Add resource group filter to reservation endpoint
Closes #185
